[wayland] fix ignored keyboard RepeatRate

X11 can take float RepeatRate, Wayland - int only so the setting is to be
rounded.
Should be indistinguishable on usual rates.

BUG: 443721


(cherry picked from commit 4395caa2568e8200f719007484609bc6ee191351)